--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "@solana/spl-token": "^0.2.0",
+    "@solana/spl-token-registry": "^0.2.3817",
     "@solana/web3.js": "^1.39.1",
     "@truffle/hdwallet-provider": "^2.0.5",
     "bip39": "^3.0.4",
