--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
   },
   "dependencies": {
     "@solana/spl-token": "^0.2.0",
-    "@solana/spl-token-registry": "^0.2.3817",
     "@solana/web3.js": "^1.39.1",
     "@truffle/hdwallet-provider": "^2.0.5",
+    "axios": "^0.27.2",
     "bip39": "^3.0.4",
     "bs58": "^5.0.0",
     "buffer-layout": "^1.2.2",
