--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@bitgo/utxo-lib": "https://github.com/ren-forks/bitgo-utxo-lib#b848585e65b42c48b98c207e72d7d3006c9a5da0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.39.1",
     "@truffle/hdwallet-provider": "^2.0.5",
