--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,6 +69,7 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true ,       /* Disallow inconsistently-cased references to the same file. */
     "resolveJsonModule": true,
+    "useUnknownInCatchVariables": false,           /* Allow using unknown as a type in a catch clause. */
   },
   "include": ["src", "types"],
 }
