Add url package

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "ed25519-hd-key": "^1.2.0",
     "ethers": "^5.6.2",
     "immutable": "^4.1.0",
-    "tiny-secp256k1": "^2.2.1"
+    "tiny-secp256k1": "^2.2.1",
+    "url": "^0.11.0"
   },
   "browser": {
     "stream": false
