--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "@waves/waves-transactions": "^4.2.10",
     "axios": "^0.27.2",
     "bip32": "^3.0.1",
-    "bip39": "^3.0.4",
+    "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.0.1",
     "bs58": "^5.0.0",
     "buffer-layout": "^1.2.2",
@@ -92,6 +92,7 @@
     "ethers": "^5.6.2",
     "immutable": "^4.1.0",
     "tiny-secp256k1": "^2.2.1",
+    "tronweb": "^6.0.2",
     "url": "^0.11.0"
   },
   "browser": {
