tests: logs(btc) & add tsdx test comands for all chains

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test",
+    "test:btc": "tsdx test --testPathPattern=bitcoin",
+    "test:eth": "tsdx test --testPathPattern=ethereum",
+    "test:sol": "tsdx test --testPathPattern=solana",
+    "test:tron": "tsdx test --testPathPattern=tron",
+    "test:waves": "tsdx test --testPathPattern=waves",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
